# gmail2s3

./: .cookiecutter.yaml  .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Makefile  README.md  config.yaml  gettoken.py  pyproject.toml  requirements.txt  run-server.sh  setup.cfg
.github/workflows/: docker-image.yml
conf/: gunicorn.py  logging.conf  logging_debug.conf  logging_json.conf
deploy/: gmail2s3.configmap.yaml  gmail2s3.deployment.yaml  gmail2s3.service-monitor.yaml  gmail2s3.service.yaml
gmail2s3/: client.py  config.py  exception.py  gmailauth.py  main.py  openapi.py  s3.py
gmail2s3/api/: gmail2s3.py  info.py
gmail2s3/api/middlewares/: errors.py
gmail2s3/commands/: cli.py  command_base.py  gmailauth.py  gmailforward.py  gmailsync.py  openapi.py  runserver.py  utils.py  version.py
scripts/: generate-conf-doc.py
tests/: conftest.py  test_apiserver.py
tests/commands/: test_cli.py  test_version.py
tests/data/: test_config.yaml
