[tool.poetry]
name = "gmail2s3"
version = "0.1.0"
description = ""
authors = ["ant31 <2t.antoine@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = ">=0.71.0", extras = ["all"]}
fpdf = "^1.7.2"
pydantic = ">=1.9.0"
PyYAML = "^6.0"
requests = "^2.28.1"
starlette = ">=0.17.1"
uvloop = "^0.16.0"
aiohttp = "^3.8.1"
async-timeout = "^4.0.2"
starlette-exporter = "^0.14.0"
paramiko = "^2.11.0"
sentry-sdk = "^1.9.5"
gunicorn = ">=0.19"
google-api-python-client = "^2.57.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.2"
boto3 = "^1.24.56"
simplegmail = {git = "https://github.com/ant31/simplegmail.git", rev = "main"}
Flask = "^2.2.2"


[tool.poetry.dev-dependencies]
bumpversion = ">=0.5.3"
flake8 = "^5.0.4"
coverage = ">=4.0"
pytest = ">=2.9.1"
pytest-cov = ">=2.2.1"
pytest-flask = ">=0.10.0"
pytest-ordering = "^0.6"
requests-mock = "^1.9.3"
tox = ">=2.1.1"
sphinxcontrib-napoleon = "^0.7"
gunicorn = ">=0.19"
gevent = "^21.12.0"
ipython = "^8.4.0"
isort = "^5.10.1"
pylint = "^2.14.5"
pep8 = "^1.7.1"
mypy = "^0.971"
black = "^22.6.0"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pep8]
exclude = "docs"
max-line-length = 120

[tool.pytest]
testpaths = "tests/"

[tool.poetry.scripts]
gmail2s3 = 'gmail2s3.commands.cli:cli'
